feat(spa): load questions

--- a/projects/with-ngrx/src/app/components/custom-modal/custom-modal.component.html
+++ b/projects/with-ngrx/src/app/components/custom-modal/custom-modal.component.html
@@ -1,4 +1,4 @@
-<section [ngClass]="{ modal: params && params.show, shown: params && params.show }">
+<section *ngIf="params && params.show" [ngClass]="{ modal: params && params.show, shown: params && params.show }">
   <div [ngClass]="{ dialog: true, show: params && params.show }">
     <header>
       <h1 [ngClass]="'popup-title'">{{ params && params.title }}</h1>
