--- a/projects/with-ngrx/src/app/components/question-group/questions/answers/answers.component.html
+++ b/projects/with-ngrx/src/app/components/question-group/questions/answers/answers.component.html
@@ -1,3 +1,5 @@
 <div *ngFor="let item of answers; let i = index">
   {{ item.text }}
 </div>
+
+<input type="text" (keyup)="addAnswer($event.keyCode)" [(ngModel)]="answerToAddText" name="answerToAddText" />
