feat(spa): starting with tailwindcss

--- a/projects/with-ngrx/src/app/app.component.html
+++ b/projects/with-ngrx/src/app/app.component.html
@@ -1,5 +1,5 @@
-<main [ngClass]="'main-container'">
-  <app-header [ngClass]="'header'"></app-header>
+<main>
+  <app-header></app-header>
   <router-outlet></router-outlet>
 </main>
 <app-custom-modal></app-custom-modal>
