--- a/projects/with-ngrx/src/app/components/home-page/actions-menu/actions-menu.component.html
+++ b/projects/with-ngrx/src/app/components/home-page/actions-menu/actions-menu.component.html
@@ -1,14 +1,2 @@
-<div class="menu-panel-container">
-  <button [ngClass]="'question-group-card-menu'" (click)="openMenuEvent()">
-    <img *ngIf="questionGroup && questionGroup.name" src="assets/images/puntos.svg" />
-  </button>
-  <ul *ngIf="openMenu" class="menu-panel">
-    <li class="menu-panel__item">
-      <a (click)="openModalEdit()">Edit</a>
-    </li>
-    <li class="menu-panel__item">
-      <a id="logoutSignOut" (click)="openModalDelete()">Delete</a>
-    </li>
-  </ul>
-  <a *ngIf="openMenu" class="panel-overlay" (click)="openMenuEvent()"></a>
-</div>
+<a href="#" class="px-4 py-2 bg-teal-400 text-white rounded-full" (click)="openModalEdit()">Edit</a>
+<a href="#" class="px-4 py-2 bg-teal-400 text-white rounded-full ml-2" (click)="openModalDelete()">Delete</a>
