--- a/projects/with-ngrx/src/app/components/home-page/home-page.component.html
+++ b/projects/with-ngrx/src/app/components/home-page/home-page.component.html
@@ -1,30 +1,37 @@
-<h1 [ngClass]="'view-title'">Your question groups</h1>
-<div [ngClass]="'question-group-card-container'">
-  <a [ngClass]="['question-group-card', 'question-group-card--new']" (click)="openModalCreateQuestionGroup()">
-    <div [ngClass]="'question-group-card__wrapper'">
-      <img
-        [ngClass]="['question-group-card__image', 'question-group-card__image--small']"
-        src="assets/images/new-question-group.svg"
-      />
-      <h2 [ngClass]="'question-group-card__title'">Create new question group</h2>
+<div class="flex flex-col sm:flex-row mt-5">
+  <div class="sm:w-1/4 p-2">
+    <div class="bg-white px-6 py-8 rounded-lg shadow-lg text-center">
+      <div class="mb-3">
+        <img class="w-48 mx-auto rounded-full" src="/assets/images/question-group-avatar.png" alt="" />
+      </div>
+      <div class="h-12"></div>
+      <a href="#" class="px-4 py-2 bg-teal-400 text-white rounded-full" (click)="openModalCreateQuestionGroup()"
+        >Create</a
+      >
     </div>
-  </a>
-  <div
-    [ngClass]="{ 'question-group-card': true, 'question-group-card--disabled': !questionGroup || !questionGroup.name }"
-    *ngFor="let questionGroup of questionGroups$ | async"
-  >
-    <app-question-group-actions-menu
-      [questionGroup]="questionGroup"
-      (edited)="editQuestionGroup($event)"
-      (deleted)="deleteQuestionGroup($event)"
-    ></app-question-group-actions-menu>
-    <a
-      [ngClass]="'question-group-card__wrapper'"
-      [routerLink]="['/question-group', questionGroup ? questionGroup.id : '']"
-    >
-      <h2 class="question-group-card__title" *ngIf="questionGroup && questionGroup.name">
-        {{ questionGroup.name }}
-      </h2>
-    </a>
+  </div>
+
+  <div class="sm:w-1/4 p-2" *ngFor="let questionGroup of questionGroups$ | async">
+    <div class="bg-white px-6 py-8 rounded-lg shadow-lg text-center">
+      <div class="mb-3">
+        <a [routerLink]="['/question-group', questionGroup ? questionGroup.id : '']">
+          <img class="w-48 mx-auto rounded-full" src="/assets/images/question-group-avatar.png" alt="" />
+        </a>
+      </div>
+
+      <div class="h-12">
+        <a
+          class="text-xl font-medium text-gray-700 mb-5"
+          [routerLink]="['/question-group', questionGroup ? questionGroup.id : '']"
+          >{{ questionGroup.name }}</a
+        >
+      </div>
+
+      <app-question-group-actions-menu
+        [questionGroup]="questionGroup"
+        (edited)="editQuestionGroup($event)"
+        (deleted)="deleteQuestionGroup($event)"
+      ></app-question-group-actions-menu>
+    </div>
   </div>
 </div>
