--- a/projects/with-ngrx/src/app/components/question-group/questions/answers/answers.component.html
+++ b/projects/with-ngrx/src/app/components/question-group/questions/answers/answers.component.html
@@ -1,11 +1,32 @@
-<div *ngFor="let item of answers; let i = index">
-  <input
-    type="text"
-    value="{{ item.text }}"
-    (focusout)="updateAnswer(13, item, $event.target.value)"
-    (keyup)="updateAnswer($event.keyCode, item, $event.target.value)"
-  />
-  <button type="button" (click)="deleteAnswer(item.id)"></button>
+<div class="h-100 w-full flex bg-teal-lightest font-sans items-center justify-center">
+  <div class="bg-white rounded shadow p-6 m-4 w-full bg-teal-100">
+    <div class="mb-4">
+      <h1 class="text-grey-darkest text-2xl">Answers</h1>
+      <div class="flex mt-4 lg:w-3/4 lg:max-w-3xl">
+        <input
+          class="shadow appearance-none border rounded w-full py-2 px-3 mr-4 text-grey-darker"
+          placeholder="Add an answer"
+          (keyup)="addAnswer($event.keyCode)"
+          [(ngModel)]="answerToAddText"
+        />
+      </div>
+    </div>
+    <div class="mt-8">
+      <div class="flex mb-4 items-center lg:w-3/4 lg:max-w-3xl" *ngFor="let item of answers">
+        <input
+          type="text"
+          value="{{ item.text }}"
+          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+          (focusout)="updateAnswer(13, item, $event.target.value)"
+          (keyup)="updateAnswer($event.keyCode, item, $event.target.value)"
+        />
+        <button
+          class="flex-no-shrink p-2 ml-2 border-2 rounded border-teal-200 hover:text-white hover:bg-teal-500"
+          (click)="deleteAnswer(item.id)"
+        >
+          Delete
+        </button>
+      </div>
+    </div>
+  </div>
 </div>
-
-<input type="text" (keyup)="addAnswer($event.keyCode)" [(ngModel)]="answerToAddText" name="answerToAddText" />
