refactor(spa): removed manual subscription to answers property

--- a/projects/with-ngrx/src/app/components/question-group/questions/questions.component.html
+++ b/projects/with-ngrx/src/app/components/question-group/questions/questions.component.html
@@ -37,7 +37,7 @@
 
         <app-answers
           *ngIf="item.isOpened"
-          [answers]="answers"
+          [answers]="answers$ | async"
           (add)="addAnswer($event)"
           (edit)="editAnswer($event)"
           (delete)="deleteAnswer($event)"
