fix(spa): some bugs and added some code annotations

--- a/projects/with-ngrx/src/app/components/question-group/question-group.component.html
+++ b/projects/with-ngrx/src/app/components/question-group/question-group.component.html
@@ -21,7 +21,7 @@
   </div>
 </nav>
 
-<app-summary *ngIf="isCurrentSection(0)" [totalQuestions]="totalQuestions" [totalAnswers]="totalAnswers"></app-summary>
+<app-summary *ngIf="isCurrentSection(0)" [totalQuestions]="totalQuestions"></app-summary>
 <app-content
   *ngIf="isCurrentSection(1)"
   [topics]="topics"
