test(spa): added tests for answers component

--- a/projects/with-ngrx/src/app/components/home-page/home-page.component.html
+++ b/projects/with-ngrx/src/app/components/home-page/home-page.component.html
@@ -21,7 +21,7 @@
 
       <div class="h-12">
         <a
-          class="text-xl font-medium text-gray-700 mb-5"
+          class="text-xl font-medium text-gray-700 mb-5 question-group-name"
           [routerLink]="['/question-group', questionGroup ? questionGroup.id : '']"
           >{{ questionGroup.name }}</a
         >
