--- a/projects/with-ngrx/src/app/components/question-group/content/questions/questions.component.html
+++ b/projects/with-ngrx/src/app/components/question-group/content/questions/questions.component.html
@@ -4,7 +4,7 @@
       <h1 class="text-grey-darkest text-2xl">Questions</h1>
       <div class="flex mt-4 lg:w-3/4 lg:max-w-3xl">
         <input
-          class="shadow appearance-none border rounded w-full py-2 px-3 mr-4 text-grey-darker"
+          class="shadow appearance-none border rounded w-full py-2 px-3 mr-4 text-grey-darker create-question-input"
           placeholder="Add a question"
           (keyup)="addQuestion($event.keyCode)"
           [(ngModel)]="questionToAddText"
@@ -17,17 +17,20 @@
           <input
             type="text"
             value="{{ item.text }}"
+            id="question-{{ item.id }}"
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
             (focusout)="updateQuestion(13, item, $event.target.value)"
             (keyup)="updateQuestion($event.keyCode, item, $event.target.value)"
           />
           <button
+            id="toggle-question-{{ item.id }}"
             class="flex-no-shrink p-2 ml-2 border-2 rounded border-teal-200 hover:text-white hover:bg-teal-500"
             (click)="toggleQuestion(item.id)"
           >
             {{ item.isOpened ? 'Collapse' : 'Expand' }}
           </button>
           <button
+            id="delete-question-{{ item.id }}"
             class="flex-no-shrink p-2 ml-2 border-2 rounded border-teal-200 hover:text-white hover:bg-teal-500"
             (click)="deleteQuestion(item.id)"
           >
