--- a/projects/original/src/app/app.component.html
+++ b/projects/original/src/app/app.component.html
@@ -1,5 +1,21 @@
-<h1 class="my-8 text-center text-6xl font-bold">
-  <span class="text-teal-500">TailwindCSS</span> and
-  <span class="text-red-600">Angular</span> is awesome!
-</h1>
-<p class="text-center text-3xl">Thanks for reading!</p>
+<main>
+  <app-header
+    (messageEventFromHeader)="receiveMessageFromHeader($event)"
+  ></app-header>
+
+  <app-home
+    *ngIf="step === 0"
+    (messageEventFromHome)="receiveMessageFromHome($event)"
+    [questionGroups]="questionGroups"
+  >
+  </app-home>
+
+  <app-question-group
+    *ngIf="step === 1"
+    [id]="questionGroupId"
+    [questionGroups]="questionGroups"
+  >
+  </app-question-group>
+</main>
+
+<app-custom-modal></app-custom-modal>
