feat(spa): added summary component in original project

--- a/projects/original/src/app/app.component.html
+++ b/projects/original/src/app/app.component.html
@@ -10,11 +10,7 @@
   >
   </app-home>
 
-  <app-question-group
-    *ngIf="step === 1"
-    [id]="questionGroupId"
-    [questionGroups]="questionGroups"
-  >
+  <app-question-group *ngIf="step === 1" [id]="questionGroupId">
   </app-question-group>
 </main>
 
