feat(spa): added topics component to the original project

--- a/projects/original/src/app/components/question-group/question-group.component.html
+++ b/projects/original/src/app/components/question-group/question-group.component.html
@@ -25,3 +25,12 @@
   *ngIf="step === 0"
   [numberOfQuestions]="numberOfQuestions"
 ></app-question-group-summary>
+
+<app-question-group-content
+  *ngIf="step === 1"
+  [questions]="questions"
+  [answers]="answers"
+  [selectedTopicIds]="selectedTopicIds"
+  [topics]="topics"
+  (messageEventFromContent)="receiveMessageFromContent($event)"
+></app-question-group-content>
