feat(spa): questions and answers management for the original project

--- a/projects/original/src/app/components/question-group/question-group-content/question-group-content.component.html
+++ b/projects/original/src/app/components/question-group/question-group-content/question-group-content.component.html
@@ -1,3 +1,8 @@
+<app-question-group-questions
+  [questions]="questions"
+  [answers]="answers"
+  (messageEventFromQuestions)="receiveMessageFromQuestions($event)"
+></app-question-group-questions>
 <app-question-group-topics
   [topics]="topics"
   [selectedTopicIds]="selectedTopicIds"
