refactor(spa): added inheritance for question and answer components

--- a/projects/original/src/app/components/question-group/question-group-content/question-group-content.component.html
+++ b/projects/original/src/app/components/question-group/question-group-content/question-group-content.component.html
@@ -1,5 +1,5 @@
 <app-question-group-questions
-  [questions]="questions"
+  [items]="questions"
   [answers]="answers"
   (messageEventFromQuestions)="receiveMessageFromQuestions($event)"
 ></app-question-group-questions>
